--- a/index.html
+++ b/index.html
@@ -1,28 +1,34 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/fontawesome.min.css">
     <link rel="stylesheet" href="">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>SpacePizza</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav>
             <label for="" class="label1">Space </label>
             <label for="" class="label2">Pizza</label>
-            <a href="">Home</a>
-            <a href="">About us</a>
-            <a href="">Service</a>
-            <a href="">Portfolio</a>
-            <a href="">Blog</a>
+            <a href="">Home</a>|
+            <a href="">Menu</a>|
+            <a href="">Service</a>|
+            <a href="">Branches</a>|
+            <a href="">About Us</a>|
             <a href="">Message us</a>
-            <a href="" id="contact">Contact Now</a>
+            <a href="" id="contact">Order Now</a>
         </nav>
     </header>
     <section id="cover-sec">
@@ -44,20 +50,50 @@
             <h1>30% OFF!</h1>
             <h2>For Online Reservation</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam laborum voluptates hic architecto, quasi veritatis voluptatum quia veniam quas esse reiciendis molestiae quisquam odit nihil expedita omnis modi velit commodi?</p>
-            <li>Lorem ipsum dolor sit amet consectetur</li>
-            <li>Lorem ipsum dolor sit amet consectetur</li>
-            <li>Lorem ipsum dolor sit amet consectetur</li>
+            <li><label><i class="fa-solid fa-pizza-slice"></i></label> Lorem ipsum dolor sit amet consectetur</li>
+            <li><label><i class="fa-solid fa-pizza-slice"></i></label> Lorem ipsum dolor sit amet consectetur</li>
+            <li><label><i class="fa-solid fa-pizza-slice"></i></label> Lorem ipsum dolor sit amet consectetur</li>
         </div>
         <div class="booktable2">
             <h2>Book Your Table</h2>
             <div>
                 <input type="text" placeholder="Name"><br>
-                <input type="email" placeholder="Email"><br>
                 <input type="date" placeholder="Date"><br>
                 <input type="time" placeholder="Time"><br>
+                <input type="number" placeholder="Person">
+                <input type="text" placeholder="Phone number"><br>
                 <button>Book Now</button>
             </div>
         </div>
     </section>
+    <footer>
+        <section class="footer-sec">
+            <div class="footer-div-mis">
+                <h2>"Our Mission"</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit quam perferendis distinctio? Iusto praesentium exercitationem amet numquam quod doloremque aperiam. Dolore voluptatum eos, iste asperiores doloremque libero maiores quos enim!</p>
+            </div>
+            <div class="footer-div1">
+                <h3 class="h3">INFORMATION</h3><br>
+                <label>Promation</label><br>
+                <label>Policy</label><br>
+                <label>Contact Us</label><br>
+                <label>Our Story</label>
+            </div>
+            <div class="footer-div2">
+                <h3 class="h3">GET IN TOUCH</h3><br>
+                <li><i class="fa-solid fa-location-dot"></i>123 Street, New York, USA</li>
+                <li><i class="fa-solid fa-envelope"></i><a href="">mail@domain.com</a></li>
+                <li><i class="fa-solid fa-phone"></i>+012 345 67890</li><br>
+                <a href=""><i class="fa-brands fa-facebook"></i></a>
+                <a href=""><i class="fa-brands fa-instagram"></i></a>
+                <a href=""><i class="fa-brands fa-twitter"></i></a>
+            </div>
+            <div class="footer-div3">
+                <h3 class="h3">OPENING HOURS</h3>
+                <label>Mon - Sat, 9AM - 6PM</label><br>
+                <label>Sunday : closed</label>
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
