--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <input type="text" placeholder="Name"><br>
                 <input type="date" placeholder="Date"><br>
                 <input type="time" placeholder="Time"><br>
-                <input type="number" placeholder="Person">
+                <input type="number" placeholder="Person"><br>
                 <input type="text" placeholder="Phone number"><br>
                 <button>Book Now</button>
             </div>
