--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -69,7 +68,7 @@
     <footer>
         <section class="footer-sec">
             <div class="footer-div-mis">
-                <h2>"Our Mission"</h2>
+                <h2>"Our Vision"</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit quam perferendis distinctio? Iusto praesentium exercitationem amet numquam quod doloremque aperiam. Dolore voluptatum eos, iste asperiores doloremque libero maiores quos enim!</p>
             </div>
             <div class="footer-div1">
