--- a/Space_pizza.html
+++ b/Space_pizza.html
@@ -69,7 +69,7 @@
         <section class="footer-sec">
             <div class="footer-div-mis">
                 <h2>"Our Vision"</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit quam perferendis distinctio? Iusto praesentium exercitationem amet numquam quod doloremque aperiam. Dolore voluptatum eos, iste asperiores doloremque libero maiores quos enim!</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit quam perferendis distinctio? Iusto praesentium exercitationem amet numquam quod doloremque aperiam. Dolore voluptatum eos, iste asperiores doloremqu!</p>
             </div>
             <div class="footer-div1">
                 <h3 class="h3">INFORMATION</h3><br>
